Fixing generation counter placement on mobile

--- a/style.css
+++ b/style.css
@@ -303,6 +303,8 @@ canvas {
         padding: 6px;
         top: 60px;     
         left: 5px;
+        bottom: auto;
+        right: auto;
     }
 
     .top-right-ui {
